Change logo animation container to 100% to prevent showing horizontal scrollbar

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -38,7 +38,7 @@ app-sign-up-dialog {
 .background-animated {
   pointer-events: none;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   z-index: 3;
   transition: all 1s linear;
 }
